LoadReport and UploadFile finished

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
+bleach
 certifi
 charset-normalizer
+docutils
 idna
+importlib-metadata
+jaraco.classes
+keyring
+markdown-it-py
+mdurl
+more-itertools
 numpy
 pandas
+pkginfo
+Pygments
 python-dateutil
 pytz
+readme-renderer
 requests
+requests-toolbelt
+rfc3986
+rich
 six
+twine
 tzdata
 urllib3
+webencodings
+zipp
