--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi
 charset-normalizer
 coverage
 docutils
+et_xmlfile
 Faker
 hubspot-api-client
 idna
@@ -21,6 +22,7 @@ mdurl
 more-itertools
 nh3
 numpy
+openpyxl
 packaging
 pandas
 pkginfo
