migman.ini MigManLoadData

--- a/migman.ini
+++ b/migman.ini
@@ -1,5 +1,5 @@
 [MigMan]
-local_project_directory = ./migmantest/TEST/nemo
+local_project_directory = ./migmantest/SIBA/nemo
 proALPHA_project_status_file=./migmantest/SIBA/nemo/other/240930_SIBA_DÜ_Datenübernahmestatus.xlsx
 ; projects = ["Sales Tax ID"]
 mapping_fields = ["S_Kunde.Kunde", "S_Adresse.Bundesland"]
