--- a/migman.ini
+++ b/migman.ini
@@ -1,8 +1,17 @@
-[MigMan]
+[siba]
 local_project_directory = ./migmantest/SIBA/nemo
 proALPHA_project_status_file=./migmantest/SIBA/nemo/other/240930_SIBA_DÜ_Datenübernahmestatus.xlsx
 ; projects = ["Sales Tax ID"]
 mapping_fields = ["S_Kunde.Kunde", "S_Adresse.Bundesland"]
 additional_fields={"S_Adresse.Bundesland": ["S_Adresse.Staat"]}
 synonym_fields={"S_Kunde.Kunde": ["S_LieferAdresse.Kunde"]}
+;multi_projects=
+
+[MigMan]
+local_project_directory = ./migmantest/WEPUKO/nemo
+proALPHA_project_status_file=./migmantest/WEPUKO/241210_WEPUKO_DÜ_Datenübernahmestatus.xlsx
+; projects = ["Sales Tax ID"]
+; mapping_fields = ["S_Kunde.Kunde", "S_Adresse.Bundesland"]
+; additional_fields={"S_Adresse.Bundesland": ["S_Adresse.Staat"]}
+; synonym_fields={"S_Kunde.Kunde": ["S_LieferAdresse.Kunde"]}
 ;multi_projects=
