--- a/migman.ini
+++ b/migman.ini
@@ -7,7 +7,7 @@ additional_fields={"S_Adresse.Bundesland": ["S_Adresse.Staat"]}
 synonym_fields={"S_Kunde.Kunde": ["S_LieferAdresse.Kunde"]}
 ;multi_projects=
 
-[WEPUKO]
+[MigMan]
 local_project_directory = ./migmantest/WEPUKO/nemo
 proALPHA_project_status_file=./migmantest/WEPUKO/241210_WEPUKO_DÜ_Datenübernahmestatus.xlsx
 ; projects = ["Sales Tax ID"]
@@ -16,7 +16,7 @@ proALPHA_project_status_file=./migmantest/WEPUKO/241210_WEPUKO_DÜ_Datenübern
 ; synonym_fields={"S_Kunde.Kunde": ["S_LieferAdresse.Kunde"]}
 ;multi_projects=
 
-[MigMan]
+[ledlenser]
 local_project_directory = ./migmantest/ledlenser
 proALPHA_project_status_file=./migmantest/ledlenser/MigManTemplate.xlsx
 ; projects = ["Customers"]
