migman.ini removed

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,26 @@
+babel
+beautifulsoup4
+boto3
+botocore
+bs4
 certifi
 charset-normalizer
 coverage
+Delorean
+et_xmlfile
+hubspot
+hubspot-api-client
+humanize
 idna
 iniconfig
 jaraco.classes
 jaraco.context
 jaraco.functools
+jmespath
 keyring
 more-itertools
 numpy
+openpyxl
 packaging
 pandas
 pluggy
@@ -17,8 +29,13 @@ pytest-cov
 python-dateutil
 pytz
 requests
+s3transfer
 setuptools
+simplejson
 six
+soupsieve
+typing_extensions
 tzdata
+tzlocal
 urllib3
 wheel
