--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,17 @@ beautifulsoup4
 boto3
 botocore
 bs4
+build
 certifi
 charset-normalizer
 coverage
 Delorean
+docutils
 et_xmlfile
 hubspot
 hubspot-api-client
 humanize
+id
 idna
 iniconfig
 jaraco.classes
@@ -18,22 +21,32 @@ jaraco.context
 jaraco.functools
 jmespath
 keyring
+markdown-it-py
+mdurl
 more-itertools
+nh3
 numpy
 openpyxl
 packaging
 pandas
 pluggy
+Pygments
+pyproject_hooks
 pytest
 pytest-cov
 python-dateutil
 pytz
+readme_renderer
 requests
+requests-toolbelt
+rfc3986
+rich
 s3transfer
 setuptools
 simplejson
 six
 soupsieve
+twine
 typing_extensions
 tzdata
 tzlocal
