--- a/metadata/applications.json
+++ b/metadata/applications.json
@@ -3,7 +3,7 @@
         "active": true,
         "description": "",
         "descriptionTranslations": {},
-        "displayName": "(Conservative) Purchasing Advisor",
+        "displayName": "Purchasing Advisor",
         "displayNameTranslations": {},
         "download": "",
         "forecasts": [],
