Füge Unterstützung für die Validierung von VAT_ID und URL hinzu, aktualisiere SQL-Skripte und entferne die Konfigurationsdatei

--- a/.dbeaver/project-metadata.json
+++ b/.dbeaver/project-metadata.json
@@ -1,1 +1,1 @@
-{"resources":{"Scripts/Test.sql":{"default-schema":"MIG","default-datasource":"sap_hana-193b4f270c2-19cbab1b7af0e0f2"}}}
+{"resources":{"Scripts/Test.sql":{"default-schema":"MIG","default-datasource":"sap_hana-193b4f270c2-19cbab1b7af0e0f2"},"Scripts/genius.sql":{"default-schema":"MIG","default-datasource":"sap_hana-193b4f270c2-19cbab1b7af0e0f2"}}}
