--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs
 babel
 beautifulsoup4
 boto3
@@ -11,6 +12,7 @@ Delorean
 Deprecated
 docutils
 et_xmlfile
+h11
 hubspot
 hubspot-api-client
 humanize
@@ -28,14 +30,17 @@ more-itertools
 nh3
 numpy
 openpyxl
+outcome
 packaging
 pandas
 pluggy
 Pygments
 pyproject_hooks
+PySocks
 pytest
 pytest-cov
 python-dateutil
+python-dotenv
 pytz
 readme_renderer
 requests
@@ -43,15 +48,24 @@ requests-toolbelt
 rfc3986
 rich
 s3transfer
+selenium
 setuptools
 simplejson
 six
+sniffio
+sortedcontainers
 soupsieve
+tabulate
+trio
+trio-websocket
 twine
 typing_extensions
 tzdata
 tzlocal
 urllib3
+webdriver-manager
+websocket-client
 wheel
 wrapt
+wsproto
 XlsxWriter
