--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,25 @@
+altair
 attrs
 babel
 beautifulsoup4
+blinker
 boto3
 botocore
 bs4
 build
+cachetools
 certifi
 cffi
 charset-normalizer
+click
 colorama
 coverage
 Delorean
 Deprecated
 docutils
 et_xmlfile
+gitdb
+GitPython
 h11
 hubspot
 hubspot-api-client
@@ -24,19 +30,28 @@ iniconfig
 jaraco.classes
 jaraco.context
 jaraco.functools
+Jinja2
 jmespath
+jsonschema
+jsonschema-specifications
 keyring
 markdown-it-py
+MarkupSafe
 mdurl
 more-itertools
+narwhals
 nh3
 numpy
 openpyxl
 outcome
 packaging
 pandas
+pillow
 pluggy
+protobuf
+pyarrow
 pycparser
+pydeck
 Pygments
 pyproject_hooks
 PySocks
@@ -47,19 +62,26 @@ python-dotenv
 pytz
 pywin32-ctypes
 readme_renderer
+referencing
 requests
 requests-toolbelt
 rfc3986
 rich
+rpds-py
 s3transfer
 selenium
 setuptools
 simplejson
 six
+smmap
 sniffio
 sortedcontainers
 soupsieve
+streamlit
 tabulate
+tenacity
+toml
+tornado
 trio
 trio-websocket
 twine
