--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
+# Include the requirements.txt file in the source distribution
 include requirements.txt
-recursive-include nemo_library/templates *
