Refactor metadata configuration and update visuals
- Changed display name from "Overview" to "Parking Lot" in pages.json.
- Updated internal names, number of columns, and rows for the Parking Lot section.
- Modified visuals to reflect new metrics and predictions for the Parking Lot.
- Added a new section for "On Time in Full" with updated visuals and metrics.
- Refactored the metadata.py file to remove unnecessary parent attribute group assignments.

--- a/metadata_optimate/applications.json
+++ b/metadata_optimate/applications.json
@@ -37,6 +37,8 @@
         "scopeName": "",
         "id": "",
         "projectId": "",
-        "tenant": ""
+        "tenant": "",
+        "isCustom": true,
+        "metadataClassificationInternalName": ""
     }
 ]
