Add conflictState attribute to Application and AttributeGroup models; update applications and attribute groups metadata

--- a/metadata_optimate/applications.json
+++ b/metadata_optimate/applications.json
@@ -1,6 +1,7 @@
 [
     {
         "active": true,
+        "conflictState": "NoConflict",
         "description": "",
         "descriptionTranslations": {
             "en": ""
