Refactor metadata configuration and improve attribute link handling
- Updated pages.json to change display names and internal names for DPO and Overview pages, adjusting visuals and layout accordingly.
- Modified metadata.py to enhance the loading of attribute links, ensuring they are created directly in NEMO instead of being exported to JSON.
- Simplified the createAttributeLinks function in nemo_persistence_api.py to utilize a generic method for creating or updating attribute links.
- Added a launch configuration for debugging in VSCode.

--- a/metadata_optimate/applications.json
+++ b/metadata_optimate/applications.json
@@ -8,8 +8,8 @@
         },
         "displayName": "Purchasing Finder",
         "displayNameTranslations": {
-            "de": "Purchasing Finder",
-            "en": "Purchasing Finder"
+            "en": "Purchasing Finder",
+            "de": "Purchasing Finder"
         },
         "download": "",
         "formatCompact": false,
