--- a/metadata_optimate/applications.json
+++ b/metadata_optimate/applications.json
@@ -6,6 +6,42 @@
         "descriptionTranslations": {
             "en": ""
         },
+        "displayName": "Sales Finder",
+        "displayNameTranslations": {
+            "en": "Sales Finder",
+            "de": "Sales Finder"
+        },
+        "download": "",
+        "formatCompact": false,
+        "internalName": "optimate_sales_finder",
+        "pages": [
+            {
+                "order": 0,
+                "page": "optimate_sales_finder_overview"
+            },
+            {
+                "order": 1,
+                "page": "optimate_sales_finder_dso"
+            },
+            {
+                "order": 2,
+                "page": "optimate_sales_finder_fot"
+            }
+        ],
+        "scopeName": "",
+        "id": "",
+        "projectId": "",
+        "tenant": "",
+        "isCustom": true,
+        "metadataClassificationInternalName": ""
+    },
+    {
+        "active": true,
+        "conflictState": "NoConflict",
+        "description": "",
+        "descriptionTranslations": {
+            "en": ""
+        },
         "displayName": "Purchasing Finder",
         "displayNameTranslations": {
             "en": "Purchasing Finder",
