Refactor metadata JSON structure and update attribute link handling
- Rearranged the order of translations and display names in pages.json for consistency.
- Added new visuals and modified existing ones in the "On Time in Full" and "DPO" sections of pages.json.
- Renamed "DSO" to "Fulfillment On Time (FOT)" and updated its visuals accordingly.
- Changed the internal names for several metrics to better reflect their purpose.
- Updated the metadata.py file to remove unnecessary duplication handling for attribute links and streamlined the export process.

--- a/metadata_optimate/applications.json
+++ b/metadata_optimate/applications.json
@@ -7,8 +7,8 @@
         },
         "displayName": "Sales Finder",
         "displayNameTranslations": {
-            "en": "Sales Finder",
-            "de": "Sales Finder"
+            "de": "Sales Finder",
+            "en": "Sales Finder"
         },
         "download": "",
         "formatCompact": false,
