--- a/metadata_optimate/applications.json
+++ b/metadata_optimate/applications.json
@@ -5,41 +5,6 @@
         "descriptionTranslations": {
             "en": ""
         },
-        "displayName": "Sales Finder",
-        "displayNameTranslations": {
-            "de": "Sales Finder",
-            "en": "Sales Finder"
-        },
-        "download": "",
-        "formatCompact": false,
-        "internalName": "optimate_sales_finder",
-        "pages": [
-            {
-                "order": 0,
-                "page": "optimate_sales_finder_overview"
-            },
-            {
-                "order": 1,
-                "page": "optimate_sales_finder_dso"
-            },
-            {
-                "order": 2,
-                "page": "optimate_sales_finder_fot"
-            }
-        ],
-        "scopeName": "",
-        "id": "",
-        "projectId": "",
-        "tenant": "",
-        "isCustom": true,
-        "metadataClassificationInternalName": ""
-    },
-    {
-        "active": true,
-        "description": "",
-        "descriptionTranslations": {
-            "en": ""
-        },
         "displayName": "Purchasing Finder",
         "displayNameTranslations": {
             "en": "Purchasing Finder",
@@ -60,6 +25,41 @@
             {
                 "order": 2,
                 "page": "optimate_purchasing_finder_otif"
+            }
+        ],
+        "scopeName": "",
+        "id": "",
+        "projectId": "",
+        "tenant": "",
+        "isCustom": true,
+        "metadataClassificationInternalName": ""
+    },
+    {
+        "active": true,
+        "description": "",
+        "descriptionTranslations": {
+            "en": ""
+        },
+        "displayName": "Sales Finder",
+        "displayNameTranslations": {
+            "en": "Sales Finder",
+            "de": "Sales Finder"
+        },
+        "download": "",
+        "formatCompact": false,
+        "internalName": "optimate_sales_finder",
+        "pages": [
+            {
+                "order": 0,
+                "page": "optimate_sales_finder_overview"
+            },
+            {
+                "order": 1,
+                "page": "optimate_sales_finder_dso"
+            },
+            {
+                "order": 2,
+                "page": "optimate_sales_finder_fot"
             }
         ],
         "scopeName": "",
