Refactor metadata for DSO and DPO: Updated display names, internal names, and visuals in pages.json to reflect changes from DPO to DSO, added new metrics, and reorganized visuals for better clarity and functionality.

--- a/metadata_optimate/applications.json
+++ b/metadata_optimate/applications.json
@@ -42,8 +42,8 @@
         },
         "displayName": "Purchasing Finder",
         "displayNameTranslations": {
-            "en": "Purchasing Finder",
-            "de": "Purchasing Finder"
+            "de": "Purchasing Finder",
+            "en": "Purchasing Finder"
         },
         "download": "",
         "formatCompact": false,
